<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>zentity</name>
    <description>Entity resolution for Elasticsearch.</description>
    <groupId>io.zentity</groupId>
    <artifactId>zentity</artifactId>
    <version>${zentity.version}-elasticsearch-${elasticsearch.version}</version>

    <properties>
        <zentity.author>Dave Moore</zentity.author>
        <zentity.classname>org.elasticsearch.plugin.zentity.ZentityPlugin</zentity.classname>
        <zentity.website>https://zentity.io</zentity.website>
        <zentity.version>1.6.0</zentity.version>
        <!-- dependency versions -->
        <elasticsearch.version>7.10.1</elasticsearch.version>
        <jackson.core.version>2.10.4</jackson.core.version>
        <jackson.databind.version>2.10.4</jackson.databind.version>
        <jdk.version>1.11</jdk.version>
        <log4j.version>2.11.1</log4j.version>
        <slf4j.version>1.7.28</slf4j.version>
        <commons-io.version>2.8.0</commons-io.version>
        <testcontainers.version>1.15.0</testcontainers.version>
        <mockito.version>3.6.28</mockito.version>
        <java-nio-tcp-proxy.version>1.5</java-nio-tcp-proxy.version>
        <!-- maven plugin versions -->
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <maven.assembly.version>3.3.0</maven.assembly.version>
        <maven.junit.version>2.7.8</maven.junit.version>
        <maven.surefire.version>2.22.2</maven.surefire.version>
        <!-- test properties -->
        <skipTests>false</skipTests>
        <skipUnitTests>${skipTests}</skipUnitTests>
        <skipIntegTests>${skipTests}</skipIntegTests>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.elasticsearch</groupId>
            <artifactId>elasticsearch</artifactId>
            <version>${elasticsearch.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.core.version}</version>
            <scope>provided</scope><!-- provided by elasticsearch -->
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.databind.version}</version>
            <scope>compile</scope><!-- not provided by elasticsearch -->
        </dependency>

        <!-- test infrastructure -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Testcontainers -->
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>elasticsearch</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- TCP Proxy -->
        <dependency>
            <groupId>com.github.terma</groupId>
            <artifactId>javaniotcpproxy</artifactId>
            <version>${java-nio-tcp-proxy.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- ES HTTP Client -->
        <dependency>
            <groupId>org.elasticsearch.client</groupId>
            <artifactId>elasticsearch-rest-high-level-client</artifactId>
            <version>${elasticsearch.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven.assembly.version}</version>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <outputDirectory>${project.build.directory}/releases/</outputDirectory>
                    <descriptors>
                        <descriptor>${basedir}/src/main/assemblies/plugin.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.carrotsearch.randomizedtesting</groupId>
                <artifactId>junit4-maven-plugin</artifactId>
                <version>${maven.junit.version}</version>
                <configuration>
                    <assertions enableSystemAssertions="false">
                        <enable/>
                    </assertions>
                    <listeners>
                        <report-text/>
                    </listeners>
                    <environmentVariables>
                        <ELASTICSEARCH_VERSION>${elasticsearch.version}</ELASTICSEARCH_VERSION>
                        <PLUGIN_BUILD_DIR>${project.build.directory}/releases/</PLUGIN_BUILD_DIR>
                    </environmentVariables>
                    <!-- disable security manager: https://discuss.elastic.co/t/integration-tests-fail-with-java-security-accesscontrolexception/69979 -->
                    <argLine>-Dtests.security.manager=false</argLine>
                </configuration>
                <executions>
                    <execution>
                        <id>unit-tests</id>
                        <phase>test</phase>
                        <goals>
                            <goal>junit4</goal>
                        </goals>
                        <inherited>true</inherited>
                        <configuration>
                            <skipTests>${skipUnitTests}</skipTests>
                            <includes>
                                <include>**/*Test.class</include>
                            </includes>
                            <excludes>
                                <exclude>**/*$*</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>integration-tests</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>junit4</goal>
                        </goals>
                        <inherited>true</inherited>
                        <configuration>
                            <skipTests>${skipIntegTests}</skipTests>
                            <includes>
                                <include>**/*IT.class</include>
                            </includes>
                            <excludes>
                                <exclude>**/*$*</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>zentity.properties</include>
                    <include>plugin-descriptor.properties</include>
                </includes>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>zentity.properties</include>
                    <include>plugin-descriptor.properties</include>
                </includes>
            </testResource>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**</include>
                </includes>
            </testResource>
        </testResources>
    </build>

</project>
